MDEV-7101: SAFE_MUTEX lock order warning when reusing wait_for_commit mutex

In SAFE_MUTEX builds, reset the wait_for_commit mutex (destroy and
re-initialise), so that SAFE_MUTEX lock order check does not become
confused when the mutex is re-used for a different purpose.